[package]
name = "kraken_api"
version = "0.1.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
log = "0.4.8"
async-trait = "0.1.33"
boringauth = "0.9.0"
http-client = "3.0.0"
base64 = "0.12.1"
hmac = "0.7.1"
sha2 = "0.8.2"
surf = "1.0.3"
